Prevent the theme roller from making a horizontal scrolbar.
Hide x-overflow to prevent the horizontal scrollbar from showing up if there are weird scaling issues.

--- a/smap/public/stylesheets/style.css
+++ b/smap/public/stylesheets/style.css
@@ -40,6 +40,7 @@ body {
     /* Fonts and Text */
     font-family: var(--font-sans);
     color: var(--color-dark);
+    overflow-x: hidden;
 }
 
 /*******************************/
